# Naoki

2ndMarch/: matlab.txt  overlap.java
2ndMarch/draftVer6-Emily-YR 2/: ClusteringTimeCost.eps  JaccardTimeCost.eps  PMPF.eps  draftVer5.aux  draftVer5.bbl  draftVer5.blg  draftVer5.tex  draftVer6.aux  draftVer6.bbl  draftVer6.blg  draftVer6.tex  framework.eps  pfalse.eps  reference.bib.bak
2ndMarch/experiment/: expriments.aux  expriments.bbl  expriments.blg  expriments.tex  reference.bib  reference.bib~
Result/: effect_of_Hash.eps  effect_of_different_clustering_techniques.eps
experiment2/GT/: a11.pgm  a180.pgm  a20.pgm  a21.pgm  a22.pgm  b454.pgm
experiment2/the_matched/: a11.pgm.pkeys  a182.pgm  a182.pgm.pkeys  b67.pgm  b67.pgm.pkeys
match2/: README  README~
match2/keyCreation/: a1.pgm  a1.pgm.pkeys  a2.pgm  run.sh  run.sh~
match2/match/: Makefile  a2.pgm.pkeys  defs.h  list.txt  list.txt~  (+6 more)
mod_lowe_demo/: .~lock.a1.key#  LICENSE  README  a1.key  a6.key  defs.h  match  match.c  out.pgm  result.pgm
naoki_project/: .ReadMe.txt.swp
papers/: framework.docx
pca_from_emily/PCA_Sample/: COPYING  LICENSE.DL  Makefile  Makefile.am  Makefile.in  NATIONAL480.pgm  NATIONAL480.pkeys  README  b9.pgm  config.h  config.status  configure  configure.ac  defs.h  gathergrads  getpatches  image.keys  keypoint.cc  keypoint.h  match.c  pcasift.cc  recalckeys  recalckeys.cc  run.sh
pca_from_emily/PCA_Sample/images2/: a2.pgm  a2.pgm.pkeys  a3.pgm  a3.pgm.pkeys  a6.pgm  a6.pgm.pkeys  image2.pgm  pcasift  run.sh  run.sh~
pcasift-0.91nd/: Makefile  config.h  config.status
(+121 files in other folders)
